--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -167,6 +167,14 @@
         <a class="chip" href="/search?q=John+3:16">John 3:16</a>
         <a class="chip" href="/search?q=Genesis+1">Genesis 1</a>
         <a class="chip" href="/search?q=Romans+8">Romans 8</a>
+        <a class="chip" href="/search?q=Matthew+5">Matthew 5</a>
+        <a class="chip" href="/search?q=Philippians+4:6-7">Philippians 4:6-7</a>
+        <a class="chip" href="/search?q=Proverbs+3:5-6">Proverbs 3:5-6</a>
+        <a class="chip" href="/search?q=Isaiah+41:10">Isaiah 41:10</a>
+        <a class="chip" href="/search?q=John+14:6">John 14:6</a>
+        <a class="chip" href="/search?q=Luke+2:11">Luke 2:11</a>
+        <a class="chip" href="/search?q=Psalm+119:105">Psalm 119:105</a>
+        <a class="chip" href="/search?q=Psalm+139">Psalm 139</a>
       </div>
     </div>
   </div>
